# deepseek-monitor

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  api.ts  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  commands.rs  csv_import.rs  lib.rs  main.rs  platform_api.rs  store.rs  tray.rs  watcher.rs
src/components/: BalanceCard.tsx  CacheHitPanel.tsx  CostCards.tsx  ModelUsage.tsx  Settings.tsx  TrendChart.tsx
tracking/: change-log.md  dev-plan.md
tracking/agent-exchange/dev-outputs/: research-a01.md
tracking/cycles/: cycle-01-core-fixes.md
